Murphy System/archive/artifacts/outputs/workspace_output_1769703290_1364.txt
  File "/workspace/murphy_backend_complete.py", line 80
    def pass_through_decorator(*args, **kwargs):
    ^^^
SyntaxError: expected 'except' or 'finally' block
